--- a/app/src/main/resources/config.properties
+++ b/app/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-db.url=jdbc:mysql://localhost:3306/plato_db?serverTimezone=UTC&useSSL=false
+db.url=jdbc:mysql://localhost:3306/plato_db?serverTimezone=UTC&useSSL=false&useUnicode=true&characterEncoding=UTF-8
 db.user=root
 db.password=
 db.poolSize=10
